manifests/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"   # Use AWS Network Load Balancer
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
